; ModuleID = '/home/carl/AnghaBench/rufus/src/ext2fs/extr_rbtree.c_ext2fs_rb_augment_erase_end.c'
source_filename = "/home/carl/AnghaBench/rufus/src/ext2fs/extr_rbtree.c_ext2fs_rb_augment_erase_end.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.rb_node = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @ext2fs_rb_augment_erase_end(%struct.rb_node* %0, i32 %1, i8* %2) #0 {
  %4 = alloca %struct.rb_node*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i8*, align 8
  store %struct.rb_node* %0, %struct.rb_node** %4, align 8
  store i32 %1, i32* %5, align 4
  store i8* %2, i8** %6, align 8
  %7 = load %struct.rb_node*, %struct.rb_node** %4, align 8
  %8 = icmp ne %struct.rb_node* %7, null
  br i1 %8, label %9, label %14

9:                                                ; preds = %3
  %10 = load %struct.rb_node*, %struct.rb_node** %4, align 8
  %11 = load i32, i32* %5, align 4
  %12 = load i8*, i8** %6, align 8
  %13 = call i32 @ext2fs_rb_augment_path(%struct.rb_node* %10, i32 %11, i8* %12)
  br label %14

14:                                               ; preds = %9, %3
  ret void
}

declare dso_local i32 @ext2fs_rb_augment_path(%struct.rb_node*, i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
